--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "report-coverage": "$(yarn bin)/nyc report --reporter=text-lcov > coverage.lcov",
     "prepublishOnly": "yarn build"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@rollup/plugin-json": "^4.0.0",
     "@rollup/plugin-node-resolve": "^6.0.0",
+    "chai": "^4.2.0",
     "cross-env": "^6.0.3",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
